--- a/README
+++ b/README
@@ -14,11 +14,12 @@ connected directly via GPIO. At time of writing no serial/I2C connected LCDs
 are supported. Extension here is also possible.
 
 To use this application, you should have mpd (music player daemon, see
-http://mpd.wikia.com/wiki/Music_Player_Daemon_Wiki) installed. Following
-libraries are needed:
-* libasound3
-* libconfuse
-* libmpd
+http://mpd.wikia.com/wiki/Music_Player_Daemon_Wiki) up and running.
+
+This application needs root privileg to run.
+
+For informations on compiling and installation, please refer to the INSTALL
+file.
 
 This application is developed and tested on a Raspberry board. However it
 should run on any embedded machin with SPI and GPIO interfaces.
